# motor-inn-seo

./: .gitignore  HANDOFF.md  README.md
audits/: audit-2026-03-30.md  audit-2026-04-06.md  audit-2026-04-09.md  audit-2026-04-13.md  audit-2026-04-20.md  audit-2026-04-23.md  audit-2026-04-27.md  audit-latest.md
audits/gbp-structural/: gbp-structural-latest.md
audits/gbp-velocity/: gbp-velocity-latest.md
config/: example.env
content/drafts/gbp-description/: description-2026-04-27.md
content/drafts/gbp-photos/: photo-plan-2026-04-27.md
content/drafts/gbp-posts/: posts-week-of-2026-04-23.md
content/drafts/gbp-services/: services-2026-04-27.md
content/drafts/review-templates/: responses-2026-04-23.md
tools/: TOOLS-REFERENCE.md
tools/claude-seo/: CHANGELOG.md  CLAUDE.md  README.md  TODO.md  install.ps1  install.sh  pyproject.toml
tools/claude-seo/.claude-plugin/: plugin.json
tools/claude-seo/docs/: ARCHITECTURE.md  INSTALLATION.md
tools/claude-seo/docs/superpowers/plans/: 2026-03-13-github-audit-fixes.md
tools/claude-seo/extensions/banana/skills/seo-image-gen/: SKILL.md
tools/claude-seo/extensions/dataforseo/skills/seo-dataforseo/: SKILL.md
tools/claude-seo/hooks/: pre-commit-seo-check.sh
tools/seomachine/config/: competitors.json
